// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`baseInput addon should render properly 1`] = `
<div>
  <div>
    <div
      class="rc-input rc-input-mode-input"
    >
      <input
        addonbefore="[object Object]"
        autocomplete="off"
        class="rc-input-input"
        role="spinbutton"
        step="1"
        value=""
      />
      <div
        class="rc-input-actions"
      >
        <span
          aria-disabled="false"
          aria-label="Increase Value"
          class="rc-input-action rc-input-action-up"
          role="button"
          unselectable="on"
        >
          <span
            class="rc-input-action-up-inner"
            unselectable="on"
          />
        </span>
        <span
          aria-disabled="false"
          aria-label="Decrease Value"
          class="rc-input-action rc-input-action-down"
          role="button"
          unselectable="on"
        >
          <span
            class="rc-input-action-down-inner"
            unselectable="on"
          />
        </span>
      </div>
    </div>
    <br />
    <br />
    <div
      class="rc-input rc-input-mode-input"
    >
      <input
        addonafter="[object Object]"
        autocomplete="off"
        class="rc-input-input"
        role="spinbutton"
        step="1"
        value=""
      />
      <div
        class="rc-input-actions"
      >
        <span
          aria-disabled="false"
          aria-label="Increase Value"
          class="rc-input-action rc-input-action-up"
          role="button"
          unselectable="on"
        >
          <span
            class="rc-input-action-up-inner"
            unselectable="on"
          />
        </span>
        <span
          aria-disabled="false"
          aria-label="Decrease Value"
          class="rc-input-action rc-input-action-down"
          role="button"
          unselectable="on"
        >
          <span
            class="rc-input-action-down-inner"
            unselectable="on"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`baseInput prefix should render properly 1`] = `
<div>
  <div
    class="rc-input rc-input-mode-input"
  >
    <input
      autocomplete="off"
      class="rc-input-input"
      role="spinbutton"
      step="1"
      value=""
    />
    <div
      class="rc-input-actions"
    >
      <span
        aria-disabled="false"
        aria-label="Increase Value"
        class="rc-input-action rc-input-action-up"
        role="button"
        unselectable="on"
      >
        <span
          class="rc-input-action-up-inner"
          unselectable="on"
        />
      </span>
      <span
        aria-disabled="false"
        aria-label="Decrease Value"
        class="rc-input-action rc-input-action-down"
        role="button"
        unselectable="on"
      >
        <span
          class="rc-input-action-down-inner"
          unselectable="on"
        />
      </span>
    </div>
  </div>
</div>
`;
